Basic 'watch' npm command to help development css animations sped up a tad better use of space; don't need title of each example taking up so much space Fix refreshing the code causing button to get hidden by canvas sometimes

--- a/src/less/768up.less
+++ b/src/less/768up.less
@@ -24,9 +24,9 @@
 .main-content {
 	left: 250px;
 	padding: 0 8.33%;
-	
+
 	.example-frame {
-		
+
 		.reload {
 			width: 80px;
 			height: 80px;
@@ -42,8 +42,7 @@
 }
 
 h1 {
-	font-size: 54px;
-	line-height: 54px;
-	//margin: 80px 0 50px;
-	margin: 50px 0 30px;
+	font-size: 32px;
+	line-height: 32px;
+	margin: 24px 0 24px;
 }
