--- a/src/less/base.less
+++ b/src/less/base.less
@@ -9,11 +9,11 @@ body {
 }
 
 a {
-	.transition(color, @aniOut);
+	.transition(color, @anim);
 	text-decoration: none;
 
 	&:hover {
-		.transition(color, @aniIn);
+		.transition(color, @anim);
 	}
 }
 
@@ -30,7 +30,7 @@ a {
 	width: 100%;
 	height: 60px;
 	background: #fff;
-	padding: 14px 0 0 33px;
+	padding: 10px 0 0 33px;
 
 	.pixijs-logo {
 		width: 99px;
@@ -44,7 +44,7 @@ a {
 		display: block;
 		position: absolute;
 		right: 15px;
-		top: 15px;
+		top: 11px;
 
 		width: 30px;
 		height: 30px;
@@ -73,14 +73,14 @@ a {
 .main-nav {
 	position: fixed;
 	left: -250px;
-	top: 60px;
+	top: 50px;
 	width: 250px;
 	bottom: 0px;
 	overflow: auto;
 	background: @blue800;
-	padding: 36px 0 60px;
+	padding: 25px 0 50px;
 	z-index: 2;
-	.transition(left, 0.3s);
+	.transition(left, @anim);
 	-webkit-overflow-scrolling: touch;
 
 	&.mobile-open {
@@ -105,7 +105,7 @@ a {
 
 			&:hover, &.open {
 				color: #fff;
-				.transition(color, 0.35s);
+				.transition(color, @anim);
 			}
 
 			/*&:hover {
@@ -138,7 +138,7 @@ a {
 				padding: 9px 30px 0;
 				cursor: pointer;
 				.innerShadow(0, 0, 0, 0, @pink400);
-				.transition(all, 0.3s);
+				.transition(all, @anim);
 
 				&:hover {
 					color: #fff;
@@ -147,14 +147,14 @@ a {
 				&.selected {
 					color: #fff;
 					.innerShadow(2px, 0, 0, 0, @pink400);
-					.transition(all, 0.3s);
+					.transition(all, @anim);
 				}
 			}
 		}
 	}
 
 	.about {
-		margin-top: 80px;
+		margin-top: 70px;
 		padding-left: 17px;
 
 		.goodboy-logo {
@@ -177,26 +177,26 @@ a {
 .main-content {
 	position: fixed;
 	left: 0px;
-	top: 60px;
+	top: 50px;
 	right: 0px;
 	bottom: 0px;
 	background: @blue900;
 	overflow: auto;
 	padding: 0 10px;
 	z-index: 1;
-	.transition(left, 0.3s);
+	.transition(left, @anim);
 	-webkit-overflow-scrolling: touch;
 
 	.example-frame {
 		width: 100%;
 		max-width: 800px;
 		background: @blue800 url(../../img/tile.png) 56px 56px;
-		position: relative;
+        position: relative;
 
 		.sizer {
 			position: relative;
 			width: 100%;
-			padding-top: 75%;
+            padding-top: 75%;
 
 			iframe {
 				position: absolute;
@@ -219,6 +219,8 @@ a {
 			margin: -26px 0 0 -32px;
 			cursor: pointer;
 
+            .transform(translate3d(0, 0, 0));
+
 			svg {
 				position: absolute;
 				left: 50%;
@@ -230,10 +232,10 @@ a {
 
 				path {
 					fill: @pink400;
-					.transition(fill, 0.3s);
+					.transition(fill, @anim);
 				}
 
-				.transition(all, 0.3s);
+				.transition(all, @anim);
 				.rotate(0deg);
 			}
 
@@ -277,7 +279,7 @@ a {
 	.code {
 		width: 100%;
 		max-width: 800px;
-		margin-top: 97px;
+		margin-top: 75px;
 		border: 1px solid @blue700;
 		height: auto;
 
@@ -347,7 +349,7 @@ a {
 		.footer {
 			background: @blue800;
 			border-top: 1px solid @blue700;
-			padding: 10px 30px 20px 12px;
+			padding: 8px 30px 18px 12px;
 			text-align: center;
 
 			.select-group {
@@ -409,7 +411,7 @@ a {
 							font-size: 12px;
 							line-height: 12px;
 							color: #fff;
-							.transition(all, 0.3s);
+							.transition(all, @anim);
 							cursor: pointer;
 
 							&:hover, &.selected {
@@ -432,7 +434,7 @@ a {
 				text-transform: uppercase;
 				height: 40px;
 				letter-spacing: 0.05em;
-				.transition(background-color, 0.3s);
+				.transition(background-color, @anim);
 				margin-top: 10px;
 
 				&:hover, &:active, &:focus {
@@ -446,7 +448,7 @@ a {
 	.submit {
 		font-size: 16px;
 		font-weight: 300;
-		margin: 30px 0 50px;
+		margin: 30px 0 40px;
 		color: @blue300;
 
 		a {
@@ -470,11 +472,11 @@ body {
 
 h1 {
 	font-weight: 400;
-	font-size: 32px;
-	line-height: 32px;
+	font-size: 30px;
+	line-height: 30px;
 	color: #fff;
 	letter-spacing: (-10/1000)em;
-	margin: 50px 0 40px;
+	margin: 20px 0 20px;
 }
 
 .blue50 { color: @blue50; }
